package me.rogerioferreira.bancodigital.banco;

public interface ITransacao {
}
