package me.rogerioferreira.bancodigital.banco;

public record TransacaoAberturaConta(double valorAbertura) implements ITransacao {
}
