package me.rogerioferreira.bancodigital.banco;

public record TransacaoDeposito(double valor) implements ITransacao {
}
