package me.rogerioferreira.bancodigital.banco;

public record TransacaoSaque(double valor) implements ITransacao {
}
