package me.rogerioferreira.bancodigital.cliente;

public record Cliente(String nome) {
}
