package me.rogerioferreira.bancodigital.conta;

public enum TipoConta {
  CORRENTE,
  POUPANCA
}
